# Mercury

compilable_mercury_mar26/devel/: .catkin  .rosinstall  setup.sh
compilable_mercury_mar26/src/: README.md
compilable_mercury_mar26/src/command/: CMakeLists.txt  package.xml
compilable_mercury_mar26/src/control/: CMakeLists.txt
compilable_mercury_mar26/src/lidar/: package.xml
devel/: .catkin  .rosinstall
devel/include/hw_interface_plugin_agent/: LOS.h
devel/include/hw_interface_plugin_arm/: armPosition.h
devel/include/hw_interface_plugin_dynamixel/: groupServoUpdate.h  servoStateResponse.h  servoUpdate.h
devel/include/msgs_and_srvs/: ArmManualMode.h  DriveCommands.h  DriveVector.h  NavStates.h  ServoCommands.h  ServoFeedback.h  VirtualBumperParams.h  VirtualBumperStatus.h  WebcamCommands.h
devel/lib/command/: command_interface_node
devel/lib/control/: drive_node
devel/lib/hw_interface/: hw_interface_node
devel/lib/hw_interface_plugin_dynamixel/: talker
devel/lib/lidar/: lidar_node
devel/lib/pkgconfig/: command.pc  control.pc  hw_interface.pc  hw_interface_plugin_agent.pc  hw_interface_plugin_arm.pc  hw_interface_plugin_dynamixel.pc  hw_interface_plugin_netburner.pc  hw_interface_plugin_operator.pc  lidar.pc  msgs_and_srvs.pc  webcam.pc
devel/lib/webcam/: client_node  publish_images_node  server_node
src/Mercury17_arduino/: Mercury17_arduino.ino
src/command/src/: command_interface.cpp  command_interface_node.cpp
src/control/: package.xml
src/control/rviz_config/: mercury.rviz
src/control/src/: drive.cpp
src/hw_interface/launch/: hw_interface_full_robot.launch  hw_interface_only_op.launch  hw_interface_plugins.launch  hw_interface_plugins_full_robot.launch
src/hw_interface_plugins/hw_interface_plugin_arm/: CMakeLists.txt
src/lidar/: CMakeLists.txt
src/lidar/scripts/: install-device-rules.sh
src/msgs_and_srvs/: CMakeLists.txt
src/webcam/: CMakeLists.txt
src/webcam/include/webcam/: config.h
src/webcam/src/: client_node.cpp  publish_images_node.cpp  server_node.cpp
(+245 files in other folders)
